--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
   "license": "ISC",
   "dependencies": {
     "cron": "^1.1.0",
-    "mongoose": "^4.5.2"
+    "ineed": "^1.0.4",
+    "mongoose": "^4.5.2",
+    "node-metainspector": "^1.3.0"
   }
 }
