--- a/package.json
+++ b/package.json
@@ -9,9 +9,13 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "bluebird": "^3.4.1",
     "cron": "^1.1.0",
+    "feedparser": "^1.1.4",
     "ineed": "^1.0.4",
+    "lodash": "^4.13.1",
     "mongoose": "^4.5.2",
-    "node-metainspector": "^1.3.0"
+    "node-metainspector": "^1.3.0",
+    "request": "^2.72.0"
   }
 }
