--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "lodash": "^4.13.1",
     "mongoose": "^4.5.2",
     "node-metainspector": "^1.3.0",
-    "request": "^2.72.0"
+    "request": "^2.72.0",
+    "winston": "^2.2.0"
   }
 }
