--- a/package.json
+++ b/package.json
@@ -11,8 +11,10 @@
   "dependencies": {
     "bluebird": "^3.4.1",
     "cron": "^1.1.0",
+    "ent": "^2.2.0",
     "feedparser": "^1.1.4",
     "ineed": "^1.0.4",
+    "js-base64": "^2.1.9",
     "lodash": "^4.13.1",
     "mongoose": "^4.5.2",
     "node-metainspector": "^1.3.0",
